# nigiri

./: CMakeLists.txt
.github/workflows/: ci.yml
include/nigiri/loader/hrd/: parser_config.h
include/nigiri/routing/: journey.h  journey_bitfield.h  limits.h  onetoall_query.h  onetoall_search.h  onetoall_start_times.h  pareto_set.h  search.h  start_times.h
include/nigiri/routing/tripbased/: settings.h
include/nigiri/routing/tripbased/AllToAll/: alltoall.h  onetoall_engine.h  onetoall_q_n.h  onetoall_queries.h  onetoall_reached.h  onetoall_state.h  onetoall_transport_segment.h
include/nigiri/routing/tripbased/query/: q_n.h  transport_segment.h
src/loader/: dir.cc
src/loader/hrd/service/: service.cc
src/loader/hrd/stamm/: station.cc
src/routing/: journey.cc  journey_bitfield.cc  onetoall_start_times.cc  start_times.cc
src/routing/tripbased/AllToAll/: alltoall.cc  onetoall_engine.cc  onetoall_q_n.cc  onetoall_reached.cc  onetoall_transport_segment.cc
src/routing/tripbased/preprocessing/: preprocessor_line_based.cc
src/routing/tripbased/query/: q_n.cc  query_engine.cc  reached.cc
test/: raptor_search.cc  raptor_search.h
test/loader/hrd/: hrd_timetable.h
test/routing/tripbased/: tb_alltoall_test.cc  tb_alltoall_test.h  tb_correctness_check.cc  tb_correctness_check.h  tb_query_test.cc
tripbased_onetoall/: aachen_oa.cc  aachen_oa_query.cc  generate_test_stops.cpp  germany_oa.cc  paths_oa.h  periods_oa.h  test_queries.h  vbb_oa.cc  vbb_oa_query.cc
tripbased_performance/: aachen_test.cc  paths.h  periods.h
